--- a/Client/Desktop/Pages/ChatPage.xaml
+++ b/Client/Desktop/Pages/ChatPage.xaml
@@ -21,8 +21,9 @@
         </Grid.RowDefinitions>
         <GridSplitter Grid.Column="0" Width="4" Grid.RowSpan="2" HorizontalAlignment="Right" VerticalAlignment="Stretch" />
         <DockPanel Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" LastChildFill="True">
-            <TextBlock Text="Grupa" DockPanel.Dock="Top" />
             <Button Content="Inne grupy" DockPanel.Dock="Bottom" Margin="15 5 15 5" Command="{Binding SeeOtherGroups}" />
+            <TextBlock Text="{Binding Username}" d:Text="Username" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10" DockPanel.Dock="Top" />
+            <Button Content="Wyloguj" DockPanel.Dock="Top" Margin="50 5 50 5" Command="{Binding Logout}" />
             <ListBox ItemsSource="{Binding Groups}" SelectionMode="Single" SelectedItem="{Binding SelectedGroup, Mode=OneWayToSource}">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
